--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     --text-main: #F4F4F4;
     --text-secondary: #575756;
     --background-color: #1F1F1F;
+    --background-color-secondary: #101010;
     --accent-color-main: #D8330F;
     --accent-color-secondary: #EBAC0B;
 }
@@ -11,6 +12,8 @@ body {
     color: var(--text-main);
     background-color: var(--background-color);
     font-family: 'Roboto', sans-serif;
+    margin: 2rem auto;
+    max-width: 1000px;
 }
 
 a {
@@ -80,4 +83,135 @@ header hr {
 
 .description {
     font-weight: 100;
+}
+
+.stats {
+    display: grid;
+    grid-template-areas: 'global region'
+                         'global map';
+}
+
+.stats-title {
+    text-align: center;
+}
+
+.stats-title h2 {
+    font-family: 'Aleo', serif;
+    font-size: 2rem;
+    margin: 1rem 0;
+}
+
+.stats-title p {
+    font-weight: 100;
+    font-size: 0.9rem;
+}
+
+.stats-region {
+    grid-area: region;
+    justify-self: end;
+    display: flex;
+    margin-bottom: 1rem;
+}
+.stats-region > div {
+    text-align: center;
+    width: 185px;
+    background-color: var(--background-color-secondary);
+    margin-right: 0.25rem;
+}
+
+.stats-region > div:first-child {
+    border-top-left-radius: 1rem;
+    border-bottom-left-radius: 1rem;
+}
+
+.stats-region > div:last-child {
+    border-top-right-radius: 1rem;
+    border-bottom-right-radius: 1rem;
+    margin-right: 0;
+}
+
+.stats-region p,
+.stats-global p {
+    font-size: 0.9rem;
+    font-weight: 100;
+}
+.stats-region span,
+.stats-global span {
+    font-weight: 700;
+    font-size: 1.25rem;
+}
+
+.stats-global {
+    grid-area: global;
+    align-self: end;
+}
+
+.stats-global > div {
+    text-align: center;
+    width: 185px;
+    background-color: var(--background-color-secondary);
+    padding: 0.5rem 0;
+    margin-top: 0.25rem;
+}
+
+.stats-global span {
+    display: block;
+    padding-top: 0.5rem;
+}
+
+.stats-map {
+    grid-area: map;
+}
+.stats-map > div {
+    display: flex;
+    justify-content: flex-end;
+    position: relative;
+}
+
+.stats-map img {
+    max-width: 90%;
+}
+
+.dot {
+    border-radius: 50%;
+    background-color: var(--accent-color-main);
+    height: 0.5rem;
+    width: 0.5rem;
+    box-shadow: 0 0 0.5rem 0.15rem var(--accent-color-main);
+}
+
+.dots .dot:nth-child(1) {
+    position: absolute;
+    top: 85px;
+    left: 150px;
+}
+
+.dots .dot:nth-child(2) {
+    position: absolute;
+    top: 215px;
+    left: 240px;
+}
+
+.dots .dot:nth-child(3) {
+    position: absolute;
+    top: 140px;
+    left: 400px;
+}
+
+.dots .dot:nth-child(4) {
+    position: absolute;
+    top: 70px;
+    left: 385px;
+}
+
+.dots .dot:nth-child(5) {
+    position: absolute;
+    top: 90px;
+    right: 210px;
+}
+
+.dots .dot:nth-child(6) {
+    position: absolute;
+    bottom: 80px;
+    right: 130px;
 }
